<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/curved_toolbar"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Restaurant Rater"
        app:titleTextColor="@android:color/white"
        />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/blank"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName"
        tools:ignore="Autofill,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textStreetAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/street_address"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="16"
        android:hint="@string/street_address_hint"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStreetAddress"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="9"
        android:hint="City"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:nextFocusDown="@id/editState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAddress"
        tools:ignore="Autofill,HardcodedText,TextContrastCheck" />

    <EditText
        android:id="@+id/editState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:ems="3"
        android:hint="@string/state"
        android:imeOptions="actionNext"
        android:inputType="textCapCharacters"
        android:minHeight="48dp"
        android:nextFocusDown="@id/editZipcode"
        app:layout_constraintStart_toEndOf="@+id/editCity"
        app:layout_constraintTop_toBottomOf="@+id/editAddress"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/editZipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:ems="5"
        android:hint="@string/zipcode"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/editState"
        app:layout_constraintTop_toBottomOf="@+id/editAddress"
        tools:ignore="Autofill,TextContrastCheck" />

    <Button
        android:id="@+id/buttonRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="80dp"
        android:text="@string/rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCity" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="84dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editZipcode" />


</androidx.constraintlayout.widget.ConstraintLayout>